# rpi_ics_viewer

./: README.md  pyproject.toml
src/home_calendar/: ics_parser.py  main.py  renderer.py
