[project]
name = "home_calendar"
version = "0.1"
description = "A simple renderer of ICS calendar to an image. Meant to be used with a RPi and an ePaper display."
authors = [
    {name = "Oldrich Kodym", email = "oldrich.kodym@gmail.com"},
]
dependencies = ["requests>=2.32.3", "icalendar>=6.1.0", "recurring-ical-events>=3.3.4", "Pillow>=11.0.0", "matplotlib>=3.10.0", "waveshare-epaper>=1.3.0", "gpiozero>=2.0.1", "lgpio>=0.2.2.0", "spidev>=3.6"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

